--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
+@use "./modal.scss";
+@use "./math-test.scss";
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Dancing+Script:wght@700&display=swap");
-@import "./modal.scss";
+
 
 :root {
   --primary-color: #1a4346;
@@ -18,6 +21,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+/* Remove increment/decrement icons from number inputs */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 body {
